# ogen/oas_client_gen.go
@@ -64,6 +64,12 @@ type Invoker interface {
 	//
 	// GET /users/{id}
 	GetUser(ctx context.Context, params GetUserParams) (GetUserRes, error)
+	// HealthCheckGetHealthCheck invokes HealthCheck_getHealthCheck operation.
+	//
+	// Returns the health status of the API.
+	//
+	// GET /healthcheck
+	HealthCheckGetHealthCheck(ctx context.Context) (*RoutesHealthCheckResponse, error)
 	// ListNotes invokes list-notes operation.
 	//
 	// メモ一覧を取得する.
@@ -624,6 +630,78 @@ func (c *Client) sendGetUser(ctx context.Context, params GetUserParams) (res Get
 
 	stage = "DecodeResponse"
 	result, err := decodeGetUserResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
+}
+
+// HealthCheckGetHealthCheck invokes HealthCheck_getHealthCheck operation.
+//
+// Returns the health status of the API.
+//
+// GET /healthcheck
+func (c *Client) HealthCheckGetHealthCheck(ctx context.Context) (*RoutesHealthCheckResponse, error) {
+	res, err := c.sendHealthCheckGetHealthCheck(ctx)
+	return res, err
+}
+
+func (c *Client) sendHealthCheckGetHealthCheck(ctx context.Context) (res *RoutesHealthCheckResponse, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("HealthCheck_getHealthCheck"),
+		semconv.HTTPRequestMethodKey.String("GET"),
+		semconv.HTTPRouteKey.String("/healthcheck"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(elapsedDuration)/float64(time.Millisecond), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, HealthCheckGetHealthCheckOperation,
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [1]string
+	pathParts[0] = "/healthcheck"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "GET", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeHealthCheckGetHealthCheckResponse(resp)
 	if err != nil {
 		return res, errors.Wrap(err, "decode response")
 	}
